fix(notification drawer): Improve alignment of pficon-close
Improve alignment of pficon-close so it sits on the same baseline as "Clear All"

--- a/src/less/notifications-drawer.less
+++ b/src/less/notifications-drawer.less
@@ -106,6 +106,10 @@
     .pficon, .fa {
       margin-right: 3px;
     }
+    .pficon-close {
+      position: relative;
+      top: 1px;
+    }
 
     &:hover { color: @link-hover-color; }
   }
